# guitar-pro-mcp

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  mcp_tools.py  run_mcp_server.py
src/controllers/: __init__.py
src/controllers/guitar_pro/: __init__.py  base_controller.py  chord_operations.py  file_operations.py  measure_operations.py  note_operations.py  song_operations.py  track_operations.py
src/utils/: __init__.py  json_export.py  midi_export.py
